--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation "androidx.appcompat:appcompat-resources:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
+    // CardView library
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
