--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VideoActivity"></activity>
-        <activity android:name=".CongratsScreen"/>
+        <activity
+            android:name=".Fragment2"
+            android:label="@string/title_activity_fragment2"></activity>
+        <activity android:name=".VideoActivity" />
+        <activity android:name=".CongratsScreen" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
