--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Fragment2"
-            android:label="@string/title_activity_fragment2"></activity>
-        <activity android:name=".VideoActivity" />
-        <activity android:name=".CongratsScreen" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Fragment2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
