--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Fragment2"></activity>
-        <activity android:name=".MainActivityJ" />
+        <activity android:name=".buttonNavigationActivites.Fragment2"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".AwarenessRoom" />
         <activity android:name=".CongratsScreen" />
-        <activity android:name=".VideoActivity" />
-        <activity android:name=".Fragment1_">
+        <activity android:name=".couseActivities.VideoActivity" />
+        <activity android:name=".startActivities.Fragment1_">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
