--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
+    // Youtube player API
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3'
+
 }
